--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "puppeteer-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "pm2-runtime ecosystem.config.js"
   },
   "dependencies": {
-    "puppeteer-core": "^22.0.0"
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8"
+  },
+  "devDependencies": {
+    "pm2": "^5.3.0"
   }
 }
